@@ -29,12 +29,10 @@
 #define __SDCC_FLOAT_LIB
 #include <float.h>
 #include <math.h>
-#include <string.h>
 
 int isnan (float f)
 {
-  float pnan = 0.0f / 0.0f;
-  float nnan = (-0.0f) / 0.0f;
   unsigned long *pl = (unsigned long *) &f;
-  return *pl == 0xffc00000 || *pl == 0x7fc00000 || !memcmp (&f, &pnan, sizeof (f)) || !memcmp (&f, &nnan, sizeof (f));
+  //return (*pl & 0x7f800000) == 0x7f800000 && (*pl & 0x007fffff) != 0;
+  return (*pl & 0x7fffffff) > 0x7f800000;
 }
