@@ -1,3 +1,9 @@
+2016-09-17 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* device/lib/isinf.c
+	* device/lib/isnan.c
+	  Improve comapabililty and efficiency.
+ 
 2016-09-15 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* device/lib/isinf.c
